<?xml version="1.0"?>
<package>
  <name>sr_blockly_blocks</name>
  <version>0.1.0</version>
  <description>A repository of blockly blocks</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPLv3</license>

  <author email="kirsty@shadowrobot.com">Kirsty Ellis</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>sr_blocks_common</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>sr_utilities</run_depend>

</package>
