<?xml version="1.0"?>
<package>
  <name>sr_blocks_common</name>
  <version>0.0.1</version>
  <description>Common code and modules for blocks library</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>